lab4: spin transistor

--- a/lab4/report/Sprawko.tex
+++ b/lab4/report/Sprawko.tex
@@ -122,8 +122,26 @@ Analogically the spin dependent conductance can be calculated as a function of $
 
 For a full polarization the total current is described by a single factor. For lower spin polarization of flowing current naturally lower total current is observed.
 
+As the last task the density of spin up and spin down electrons and the spin $s_x, s_y,s_z$ density in the nanowire were calculated. Spin dependent electron densities maps are presented below.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{../plots/task2_charge_density.pdf}
+	\caption{Spin dependent electron densities.}
+\end{figure}
+
+Plot clearly shows how spin of a electron flips in the process of electronic transport in analysed system. As shown before, the spin dependent conductance changes periodically in function fo alpha, so it is possible that a corresponding outcome can be achieved by a numerous spin flip transitions. However in this case spin rotates only once.
+
+The spin densities are plotted in a figure below.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{../plots/task2_spin_density.pdf}
+	\caption{Spin densities in a nanowire, $\alpha=18$ meVnm.}
+\end{figure}
 
 \section*{Summary}
+
+Nano-devices utilising spin as a additional degree of freedom can find many applications exceeding electronics for example in data storage. By tuning materials Rashba type spin-orbit interaction desired spin transport properties can be achieved, without the necessity for dependence on external magnetic fields. 
 
 
 
